Fix creation of new JS objects

A default constructed QJSValue is undefined, not an object.

BUG: 474256
FIXED-IN: 23.08.1
(cherry picked from commit e41f682b3d1b1382aebda8c5575b53295ddf01df)